<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment"
    android:background="@color/dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/profile_image"
            android:src="@drawable/img_profile" />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/source_sans_pro_semibold"
            android:text="@string/name"
            android:textColor="@color/light"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/profile_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/source_sans_pro"
            android:text="@string/username_placeholder"
            android:textColor="@color/light"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/requests_button"
                    style="@style/Widget.Material3.Button.IconButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:insetTop="8dp"
                    android:insetBottom="0dp"
                    app:icon="@drawable/ic_star_outline_40dp"
                    app:iconTint="@color/light"
                    app:strokeColor="@color/light" />

                <TextView
                    android:id="@+id/requests_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/source_sans_pro_semibold"
                    android:text="@string/requests"
                    android:textColor="@color/light"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/edit_button"
                    style="@style/Widget.Material3.Button.IconButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:insetTop="8dp"
                    android:insetBottom="0dp"
                    app:icon="@drawable/ic_edit_40dp"
                    app:iconTint="@color/light"
                    app:strokeColor="@color/light" />

                <TextView
                    android:id="@+id/edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/source_sans_pro_semibold"
                    android:text="@string/edit"
                    android:textColor="@color/light"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/friends_button"
                    style="@style/Widget.Material3.Button.IconButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:insetTop="8dp"
                    android:insetBottom="0dp"
                    android:textSize="14sp"
                    app:icon="@drawable/ic_friends_40dp"
                    app:iconTint="@color/light"
                    app:strokeColor="@color/light" />

                <TextView
                    android:id="@+id/friends_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/source_sans_pro_semibold"
                    android:text="@string/friends"
                    android:textColor="@color/light"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/qrcode_button"
                    style="@style/Widget.Material3.Button.IconButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:insetTop="8dp"
                    android:insetBottom="0dp"
                    android:textSize="14sp"
                    app:icon="@drawable/ic_qr_code_2_24px"
                    app:iconTint="@color/light"
                    app:strokeColor="@color/light" />

                <TextView
                    android:id="@+id/qrcode_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/source_sans_pro_semibold"
                    android:text="@string/qr_code"
                    android:textColor="@color/light"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/logout_button"
                    style="@style/Widget.Material3.Button.IconButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:insetTop="8dp"
                    android:insetBottom="0dp"
                    android:textSize="14sp"
                    app:icon="@drawable/ic_logout_24px"
                    app:iconTint="@color/light"
                    app:strokeColor="@color/light" />

                <TextView
                    android:id="@+id/logout_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/source_sans_pro_semibold"
                    android:text="@string/logout"
                    android:textColor="@color/light"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>