<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.FriendsFragment"
    android:background="@color/dark">

    <LinearLayout
        android:id="@+id/mainContentContainer"
        android:layout_width="415dp"
        android:layout_height="681dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingEnd="20dp"
        android:paddingRight="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="265dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="14dp"
                android:checked="true"
                android:fontFamily="@font/source_sans_pro"
                android:outlineProvider="none"
                android:text="Followers"
                android:textColor="@color/light"
                android:textSize="20sp"
                app:trackTint="@color/confusion" />

            <TextView
                android:id="@+id/public_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/source_sans_pro"
                android:text="Following  "
                android:textColor="@color/light"
                android:textSize="20sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/txt_followers" />

        <FrameLayout
            android:layout_width="352dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayoutFeed"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView_users"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <!-- Loading indicator -->
            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

            <!-- Empty state view -->
            <LinearLayout
                android:id="@+id/empty_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp"
                android:visibility="gone">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginBottom="16dp"
                    android:alpha="0.5"
                    android:src="@drawable/ic_person_24dp"
                    app:tint="@color/light"/>

                <TextView
                    android:id="@+id/empty_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="No data available"
                    android:textAlignment="center"
                    android:textColor="@color/light" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

    <!-- Back button repositioned to bottom left -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/back_button"
        style="@style/Widget.Material3.FloatingActionButton.Primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:backgroundTint="@color/dark"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_arrow_back_24dp"
        app:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/light"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="18dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>