...
            android:text="@string/friends_can_scan_this_to_follow_you"
            android:textAlignment="center"
            android:textColor="@color/dark"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/qrcode_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="6dp"
            android:backgroundTint="@color/light"
            android:minWidth="400px"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dismiss_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/dark"
                android:text="@string/dismiss"
                android:textColor="@color/light" />
...
