...
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxStrokeColor="@color/dark"
            app:hintTextColor="@color/dark"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editname_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

...
                android:text="@string/cancel"
                android:layout_marginEnd="8dp"
                android:textColor="@color/dark"
                app:rippleColor="@color/dark" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark"
                android:textColor="@color/light"
                android:text="@string/save" />
        </LinearLayout>
...
